[build-system]
requires = [
    "setuptools >= 61.0.0",
    "setuptools_scm >= 7.0.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "lymph-model"
description = "Package for statistical modelling of lymphatic metastatic spread."
authors = [
    {name = "Roman Ludwig", email = "roman.ludwig@usz.ch"}
]
readme = "README.md"
requires-python = ">=3.8"
keywords = ["cancer", "metastasis", "lymphatic progression", "model"]
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "emcee",
    "h5py",
    "tables",
    "tqdm",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
    "coverage",
    "hypothesis",
]
dev = [
    "pre-commit",
    "isort",
    "pycln",
    "pylint",
]

[project.urls]
repo = "https://github.com/rmnldwg/lymph"
docs = "https://lymph-model.readthedocs.io"


[tool.setuptools_scm]
write_to = "lymph/_version.py"
local_scheme = "no-local-version"

[tools.setuptools]
include-package-data = true

[tools.setuptools.dynamic]
version = {attr = "lymph._version.version"}


[tool.isort]
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pycln]
all = true
