[metadata]
name = lymph-model
version = attr: lymph._version.version
author = Roman Ludwig
author_email = roman.ludwig@usz.ch
description = Package for statistical modelling of lymphatic metastatic spread.
long_description = file: README.rst
license = MIT
license_files = file: LICENSE
url = https://github.com/rmnldwg/lymph
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    numpy
    scipy
    pandas
    emcee
    h5py
    tables
    tqdm

[options.extras_require]
test =
    pytest
    coverage
    hypothesis

[versioneer]
VCS = git
style = pep440
versionfile_source = lymph/_version.py
versionfile_build = lymph/_version.py
tag_prefix =
parentdir_prefix =
